# rj-pisowifi

./: .gitignore  ACCOUNT_REVENUE_PLAN.md  DEVICE_COMPATIBILITY_PLAN.md  ESP32_FIRMWARE_PLAN.md  FASTFI_COMPARISON_PLAN.md  FREEMIUM_PLAN.md  LICENSE  PIHOLE_PLAN.md  PISOWIFI_REFERENCE_NOTES.md  README.md  ROUTER_MODE_PLAN.md  SECURITY_PLAN.md  SETUP_GUIDE.md  WISP_EXPANSION_PLAN.md  ZENCAFE_ENTERPRISE_PROPOSAL.md  ZENTRY_SYSTEMS_PROPOSAL.md  bugslog.md  package-lock.json  package.json
.claude/: launch.json
esp32/firmware/: config.cpp  config.h  lcd_display.cpp
esp32/firmware/rj_pisowifi/: coin.cpp  config.cpp  config.h  lcd_display.cpp  ota.cpp  relay.cpp  rj_pisowifi.ino  web_server.cpp  wifi_manager.cpp
esp8266/firmware/data/: index.html
esp8266/firmware/rj_pisowifi_esp8266/: README.md  coin.cpp  config.cpp  config.h  lcd_display.cpp  ota.cpp  relay.cpp  rj_pisowifi_esp8266.ino  web_server.cpp  wifi_manager.cpp
public/admin/: index.html
public/admin/css/: admin.css  themes.css
public/admin/js/: about.js  app.js  branding.js  dashboard.js  devices.js  network.js  promos.js  rates.js  sales.js  security.js  sessions.js  settings.js  update.js  vouchers.js
public/admin/pages/: about.html  branding.html  dashboard.html  devices.html  network.html  promos.html  rates.html  sales.html  security.html  sessions.html  settings.html  update.html  vouchers.html
public/portal/: index.html
public/portal/assets/css/: portal.css
public/portal/assets/js/: portal.js
server/: app.js
server/config/: database.js
server/routes/: admin.js  coin.js  portal.js  promo.js  session.js
server/services/: dnsFilterService.js  financialLogService.js  hardwareDetection.js  hostNetworkService.js  mikrotikApiClient.js  mikrotikConfigHelper.js  mikrotikProvisioner.js  mikrotikService.js  networkService.js  sessionService.js  spamService.js  sseService.js  timerService.js  voucherService.js
server/utils/: passwordHash.js  secretCrypto.js
setup/: fix-clock.sh  install-pihole.sh  install.sh  nginx.conf  set-cpu-performance.sh  setup-network.sh  watchdog.sh
zencafe-os/: .gitignore  CMakeLists.txt  DEVELOPMENT.md  README.md
zencafe-os/docs/api/: README.md
zencafe-os/docs/architecture/: README.md  communication-protocol.md
zencafe-os/docs/deployment/: README.md
zencafe-os/docs/setup/: README.md  system-requirements.md
zencafe-os/docs/troubleshooting/: README.md
zencafe-os/src/config/: config_manager.h
zencafe-os/src/launcher/: launcher.h
zencafe-os/src/lockdown/: lockdown.h
zencafe-os/src/monitor/: watchdog.h
zencafe-os/src/shell/: shell.h
zencafe-server/: .gitignore  CMakeLists.txt  DEVELOPMENT.md  PROGRESS.md  README.md
zencafe-server/docs/api/: README.md  wifi-bridge-api.md
zencafe-server/docs/architecture/: README.md  localization.md
zencafe-server/docs/business-model/: README.md
zencafe-server/docs/compliance/: README.md
zencafe-server/docs/database/: README.md
zencafe-server/docs/deployment/: README.md  cloud-stack.md  hardware-requirements.md  update-strategy.md
zencafe-server/docs/gamification/: README.md
zencafe-server/docs/social/: README.md
zencafe-server/migrations/: 001_foundation.down.sql  001_foundation.sql  001_foundation.up.sql  002_reservations.down.sql  002_reservations.up.sql  003_cosmetics_and_marketplace.down.sql  003_cosmetics_and_marketplace.up.sql  004_subscriptions.down.sql  004_subscriptions.up.sql  005_subscription_grace_period.down.sql  005_subscription_grace_period.up.sql  006_compliance.down.sql  006_compliance.up.sql  007_age_verification_requests.down.sql  007_age_verification_requests.up.sql  008_content_and_chat_tiers.down.sql  008_content_and_chat_tiers.up.sql  009_social.down.sql  009_social.up.sql  010_cafe_security_toggles.down.sql  010_cafe_security_toggles.up.sql  011_guest_self_attestation.down.sql  011_guest_self_attestation.up.sql  012_gamification.down.sql  012_gamification.up.sql  013_localization_and_versioning.down.sql  013_localization_and_versioning.up.sql  014_connection_grace_period.down.sql  014_connection_grace_period.up.sql
zencafe-server/src/: main.cpp
zencafe-server/src/admin/: admin_service.h
zencafe-server/src/analytics/: analytics_service.h
zencafe-server/src/api/: api_server.h
zencafe-server/src/auth/: auth_service.h
zencafe-server/src/billing/: billing_service.h
zencafe-server/src/database/: database_manager.h  migration_runner.cpp  migration_runner.h
zencafe-server/src/games/: game_service.h
zencafe-server/src/sessions/: session_manager.h
